kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mikhail-app
spec:
    selector:
      app: mikhail-app
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
